<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" 
    android:weightSum="10.15">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#222C36" >

        <ImageButton
            android:id="@+id/btn_user_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#222C36"
            android:onClick="backmore"
            android:src="@drawable/arrow"
            android:text="@string/back"
            android:textColor="#FF8B2E" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@id/btn_user_back"
            android:text="@string/aboutus"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.15"
	    android:background="#EB131E">
	</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="团队照片" 
                android:textColor="#FF8B2E"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
            
            <RelativeLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1" 
	            >
                
                <TextView 
                    android:id="@+id/tv_appname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appname"
                    android:textSize="25sp"
                    android:layout_centerInParent="true"
                    />
                <TextView 
                    android:id="@+id/tv_appversion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appversion"
                    android:textSize="15sp"
                    android:layout_toRightOf="@id/tv_appname"
                    android:layout_alignBottom="@id/tv_appname"             
                    />
                
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appintroduction"
                    android:textColor="#222C36"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/company"
                    android:textColor="#222C36"
                    android:textSize="10sp"/>
                <TextView
                    android:id="@+id/tv_contactus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_above="@id/tv_company"
                    android:text="@string/contactus"
                    android:textColor="#222C36"
                    android:textSize="10sp" />                
                
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/btn_checkupdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkupdate"
                    android:textSize="18sp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="30dp"
                    />
                <Button
                    android:id="@+id/btn_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback"
                    android:textSize="18sp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    />
                
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
