<?xml version="1.0" encoding="utf-8"?>
<!-- 我的页面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" 
    android:weightSum="10.15">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#222C36" >

        <ImageButton
            android:id="@+id/btn_user_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#222C36"
            android:onClick="backmain"
            android:src="@drawable/arrow"
            android:text="@string/back"
            android:textColor="#FF8B2E" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@id/btn_user_back"
            android:text="@string/mine"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.15"
	    android:background="#EB131E">
	</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="徽章图片" 
                android:textColor="#FF8B2E"/>
            <ImageView 
                android:layout_height="fill_parent"
                android:layout_width="1dp"
                android:background="#BDBEC2"
                android:layout_alignParentRight="true"
                />
            
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/ridemaster"
                    android:textColor="#222C36"
                    android:textSize="20sp" />
                <ImageView 
	                android:layout_height="1dp"
	                android:layout_width="fill_parent"
	                android:background="#BDBEC2"
	                android:layout_alignParentBottom="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/totalride"
                    android:textColor="#222C36"
                    android:textSize="20sp" />
                <ImageView 
	                android:layout_height="1dp"
	                android:layout_width="fill_parent"
	                android:background="#BDBEC2"
	                android:layout_alignParentBottom="true"/>
                
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/time"
                    android:textColor="#222C36"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="总时间"
                    android:textColor="#FF8B2E"
                    android:textSize="20sp" />
                <ImageView 
	                android:layout_height="1dp"
	                android:layout_width="fill_parent"
	                android:background="#BDBEC2"
	                android:layout_alignParentBottom="true"/>
                
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/mileage"
                    android:textColor="#222C36"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="里程图片及文字"
                    android:textColor="#FF8B2E"
                    android:textSize="20sp" />
                
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
